fix margin on mobile menu

--- a/src/style/_main-nav.scss
+++ b/src/style/_main-nav.scss
@@ -65,7 +65,6 @@ body {
                 li {
                     &:first-child {
                         text-align: left;
-                        margin-left: 1rem;
                     }
                 }
 
